# relay

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  gitman.yml  manifest  nj5lfvverndhsho5svos9ahtqn1tghgh.darc  pyproject.toml  relay.service  relay.yaml.example  requirements.txt
.beads/: beads.db  beads.db-shm  beads.db-wal  interactions.jsonl  issues.jsonl  last-touched  metadata.json  sync-state.json
.claude/commands/: health.md  kill-sessions.md  logs.md  sessions.md
.claude/skills/aura.execute/: SKILL.md
.claude/skills/aura.graph/: SKILL.md
.claude/skills/aura.rapid_dev/: SKILL.md
.claude/skills/aura.scope/: SKILL.md
.claude/skills/aura.vision/: SKILL.md
2026-02-28--Agentic Ergonomics/: exec_summary.md  research-proposal.md  story.md
deliverables/: gpu-hours-model.html
docs/: cyborg-bridge-snippet.md
logs/: heartbeat-latest.txt
plans/: safe-restart.md
research/: 2026-03-20-communication-layer-trade-study.md
scripts/: agent-cron.sh  auto-blueprint.sh  auto-build.sh  bulk-save.sh  clone-distill.sh  clone-prune.sh  clone-think.sh  daily-digest.sh  heartbeat.sh  install-cron.sh  install-watchdog.sh  memories-question.sh  relay.service.watchdog  session-cleanup.py
src/relay/: agent.py  config.py  cron.py  discord_adapter.py  intake.py  main.py  store.py  telegram.py  voice.py
tests/: conftest.py  test_agent.py  test_auto_blueprint.py  test_config.py  test_cyborg_bridge.py  test_discord_adapter.py  test_heartbeat.py  test_intake.py  test_integration.py  test_main.py  test_safe_restart.py  test_store.py  test_telegram.py  test_voice.py
(+12 files in other folders)
